<resources>
    <string name="app_name">Cyclo Computr</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_drive_list">Drives</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="speed_string">0.0</string>
    <string name="distance_string">0.00</string>
    <string name="accuracy_string">unavailable</string>
    <string name="time_string">00:00:00</string>
    <string name="total_time_string">Total time</string>
    <string name="avg_speed_string">Avg speed:</string>
    <string name="max_speed_string">Max speed:</string>
    <string name="total_distance_string">Total distance</string>
    <string name="distance_text_string">Distance:</string>
    <string name="time_text_string">Time of drive:</string>

    <array name="drawer_array">
        <item>Computer</item>
        <item>Drive list</item>
        <item>Settings</item>
    </array>

    <string name="pref_title_cat">Setings</string>
    <string name="pref_speed_unit">Set speed unit</string>
    <string name="pref_speed_unit_sum">Choose speed unit</string>
    <string-array name="speed_unit_array">
        <item>m/s</item>
        <item>km/h</item>
        <item>miles/h</item>
    </string-array>
    <string-array name="speed_unit_values_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="pref_distance_unit">Set distance unit</string>
    <string name="pref_distance_unit_sum">Choose distance unit</string>
    <string-array name="distance_unit_array">
        <item>kilometer</item>
        <item>mile</item>
    </string-array>
    <string-array name="distance_unit_values_array">
        <item>1</item>
        <item>2</item>
    </string-array>
    <integer name="default_value">1</integer>
    <string name="pref_night_mode">Night mode</string>
    <string name="title_activity_setings">Setings</string>
    <string name="title_activity_drive_list">Drives</string>
    <string name="title_activity_drive_detail">Drive Detail</string>
    <string name="title_activity_restart">Restart</string>
    <string name="title_activity_graph">Graph</string>
</resources>
